Fri Jun 24 13:06:45 2005  akira yamada  <akira@ruby-lang.org>

	* lib/uri/common.rb, lib/uri/generic.rb: fixed typo in documents and
	  replaced some existent domain name with "example.com".

Fri Jun 24 12:23:19 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk.rb: fix typo on Tk.grid_propagate.

	* ext/tk/lib/tk.rb: Tk.event_generate and TkWindow#event_generate
	  accept TkEvent::Event object as context argument.

	* ext/tk/lib/tk/event.rb: add TkEvent::Event#valid_fields and
	  valid_for_generate to get field parameters of event_generate.

Thu Jun 23 23:55:59 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* runruby.rb: should load built rbconfig.rb.

Thu Jun 23 16:53:15 2005  Hidetoshi NAGAI  <nagai@ai.kyutech.ac.jp>

	* ext/tk/lib/tk/canvastag.rb: TkcGroup.new cannot include given items.
	  TkcGroup#exclude calls wrong method.
	  Add alias TkcGroup#add [ruby-talk:146049].

	* ext/tk/lib/tk/canvas.rb: TkCanvas#dtag and some subcommands of
	  TkCanvas#addtag fail to treat a TkcTag argument.

	* ext/tk/lib/tk/event.rb: add TkEvent::Event#generate to help to send
	  current event to other widgets.

Mon Jun 20 18:44:04 2005  Tanaka Akira  <akr@m17n.org>

	* eval.c (FUNCTION_CALL_MAY_RETURN_TWICE): DUMMY_SETJMP is replaced
	  because setjmp is not enough to fix getcontext and SPARC register
	  window problem.

Mon Jun 20 16:48:36 2005  NAKAMURA Usaku  <usa@ruby-lang.org>

	* ext/dbm/dbm.c (fdbm_closed): new method DBM#closed?

	* ext/gdbm/gdbm.c (fgdbm_closed): new method GDBM#closed?

	* ext/sdbm/init.c (fsdbm_closed): new method SDBM#closed?

	* test/dbm/test_dbm.rb, test/gdbm/test_gdbm.rb, test/sdbm/test_sdbm.rb
	  (teardown): close all db objects before deleting data files.

	* win32/win32.{ch} (unlink): hook runtime function to change
	  file attribute before unlinking.
	  fixed: [ruby-dev:26360]

Mon Jun 20 02:15:35 2005  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* gc.c (define_final): document fix: finalizers never get called